--- a/public/auth/index.html
+++ b/public/auth/index.html
@@ -2,7 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>blunder.tk</title>
+    <link rel="stylesheet" href="style.css">
+    <title>blunder.tk - Sign Up</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-app.js"></script>
     <script>
       var firebaseConfig = {
@@ -15,8 +17,15 @@
       };
       firebase.initializeApp(firebaseConfig);
     </script>
+    <script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-auth.js"></script>
   </head>
-  <body style="background-color: #596275">
-
+  <body>
+    <script src="script.js"></script>
+    <div id="form">
+      <div class="form_header">SIGN UP</div>
+      <input id="email" class="form_input" type="text"></input>
+      <input id="pass" class="form_input" type="password"></input>
+      <a class="form_next" onclick="submit()">DONE</a>
+    </div>
   </body>
 </html>
