--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>blunder.tk</title>
+    <link rel="stylesheet" href="style.css"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Comfortaa">
     <script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-app.js"></script>
     <script>
@@ -17,7 +18,11 @@
       firebase.initializeApp(firebaseConfig);
     </script>
   </head>
-  <body style="background-color: #596275">
+  <body>
+    <div id="header">
+      <div class="logo">BLUNDER.TK</div>
+      <button class="user_tile">USER_0000</button>
+    </div>
 
   </body>
 </html>
