--- a/public/index.html
+++ b/public/index.html
@@ -20,8 +20,13 @@
   </head>
   <body>
     <div id="header">
-      <div class="logo">blunder.tk</div>
-      <button class="user_tile">Fronddi</button>
+      <div class="logo">BLUNDER.TK</div>
+      <button class="user_tile">USER_0000</button>
+    </div>
+    <div id="user_dropdown">
+      <a class="user_dropdown_item">Настройки</a>
+      <a class="user_dropdown_item" style="color: #bbbbbb; pointer-events: none;">Помощь</a>
+      <a class="user_dropdown_item">Выход</a>
     </div>
 
   </body>
