--- a/public/index.html
+++ b/public/index.html
@@ -20,8 +20,8 @@
   </head>
   <body>
     <div id="header">
-      <div class="logo">BLUNDER.TK</div>
-      <button class="user_tile">USER_0000</button>
+      <div class="logo">blunder.tk</div>
+      <button class="user_tile">Fronddi</button>
     </div>
     <div id="user_dropdown">
       <a class="user_dropdown_item">Настройки</a>
