--- a/public/index.html
+++ b/public/index.html
@@ -23,19 +23,15 @@
   <body>
     <div id="header">
       <div class="logo">blunder.tk</div>
+
       <button class="user_tile">Fronddi</button>
     </div>
-    <div id="user_dropdown">
-      <a class="user_dropdown_item" id="settings">Настройки</a>
-      <a class="user_dropdown_item" style="color: #bbbbbb; pointer-events: none;">Помощь</a>
-      <a class="user_dropdown_item" id="logout">Выход</a>
-    </div>
+      <div class="level_box"></div>
 
-    <div id="settings_window">
-      <div class="settings_window_header">Настройки</div>
-      <div class="settings_window_close"></div>
+    <div id="profile">
+      <div class="profile_header">Профиль</div>
+      <div class="profile_close"></div>
     </div>
-          <div class="settings_window_bg"></div>
-
+          <div class="profile_bg"></div>
   </body>
 </html>
