--- a/public/index.html
+++ b/public/index.html
@@ -23,15 +23,28 @@
   <body>
     <div id="header">
       <div class="logo">blunder.tk</div>
-
       <button class="user_tile">Fronddi</button>
     </div>
       <div class="level_box"></div>
 
     <div id="profile">
-      <div class="profile_header">Профиль</div>
-      <div class="profile_close"></div>
+      <div class="profile_header">Профиль
+        <div class="profile_close"></div>
+      </div>
+      <div class="profile_box">
+        <div class="profile_pic"></div>
+        <div class="profile_data">
+          <div class="profile_name">Fronddi</div>
+          <div class="profile_level_box">
+            <div class="profile_level">1</div>
+            <div class="profile_level_bar"></div>
+          </div>
+        </div>
+
+      </div>
+
     </div>
-          <div class="profile_bg"></div>
+
+    <div class="profile_bg"></div>
   </body>
 </html>
