New message about cookies usage.

--- a/public/auth/index.html
+++ b/public/auth/index.html
@@ -28,5 +28,7 @@
       <input id="pass" class="form_input" type="password"></input>
       <a class="form_next" onclick="submit()">DONE</a>
     </div>
+
+    <div id="message">Наш сайт использует <a style="color: orange" href="https://ru.wikipedia.org/wiki/Cookie">cookies</a> для хранения Ваших данных! Проходя этот шаг, вы даёте согласие на их использование. Пожалуйста, внимательно прочитайте <a href="https://www.wutdafuk.com" style="color: #bbbbbb;">условия пользования</a>, прежде чем проходить далее!</div>
   </body>
 </html>
