--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
       <div class="profile_name">Fronddi</div>
       <div class="profile_level">99</div>
       <div class="profile_level_bar"></div>
-
+      <a class="profile_logout" href="">ВЫЙТИ</a>
     </div>
 
     <div class="profile_bg"></div>
