--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,9 @@
       };
       firebase.initializeApp(firebaseConfig);
     </script>
+    <script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-auth.js"></script>
     <script src="menu.js"></script>
+    <script src="account.js"></script>
   </head>
   <body>
     <div id="header">
