Many changes... scriptable chess board... yes, you're right-scriptable.

--- a/public/chess/index.html
+++ b/public/chess/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
-    <title>blunder.tk - Sign Up</title>
+    <title>blunder.tk - Шахматы</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Comfortaa">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-app.js"></script>
@@ -19,16 +19,12 @@
       firebase.initializeApp(firebaseConfig);
     </script>
     <script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-auth.js"></script>
+
   </head>
   <body>
-    <script src="script.js"></script>
-    <div id="form">
-      <div class="form_header">ВХОД</div>
-      <input id="email" class="form_input" type="text"></input>
-      <input id="pass" class="form_input" type="password"></input>
-      <a class="form_next" onclick="submit()">ВОЙТИ</a>
-    </div>
-
-    <div id="message">Наш сайт использует <a style="color: orange" href="https://ru.wikipedia.org/wiki/Cookie">cookies</a> для хранения Ваших данных! Проходя этот шаг, вы даёте согласие на их использование. Пожалуйста, внимательно прочитайте <a href="https://www.wutdafuk.com" style="color: #bbbbbb;">условия пользования</a>, прежде чем проходить далее!</div>
+    <script src="logic.js"></script>
+    <<div class="gsua">GOD, SAVE US ALL...</div>
+    <canvas id="board" width="800" height="800"></canvas>
   </body>
+
 </html>
