Something like working "chess setup script" ...in my opinion

--- a/public/chess/index.html
+++ b/public/chess/index.html
@@ -23,8 +23,9 @@
   </head>
   <body>
     <script src="logic.js"></script>
-    <<div class="gsua">GOD, SAVE US ALL...</div>
+
     <canvas id="board" width="800" height="800"></canvas>
+    <div id="pieces"></div>
   </body>
 
 </html>
