--- a/public/tic_tac_toe/index.html
+++ b/public/tic_tac_toe/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
-    <title>blunder.tk - Домино</title>
+    <title>blunder.tk - Крестики-Нолики</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Comfortaa">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-app.js"></script>
@@ -22,8 +22,6 @@
 
   </head>
   <body>
-
-
     <canvas id="board" width="800" height="800"></canvas>
     <script src="logic.js"></script>
   </body>
