Moving back to html...

--- a/public/auth/index.html
+++ b/public/auth/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
-<?php include "../header.php"; ?>
 <html>
   <head>
     <meta charset="utf-8">
     <title>blunder.tk - Sign Up</title>
+    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Comfortaa">
+    <link rel="icon" href="logo.svg" sizes="any" type="image/svg+xml">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-app.js"></script>
     <script>
       var firebaseConfig = {
         apiKey: "AIzaSyDQvbznQa-Yb1tUcZpByS8Hsy2EGZfqZMg",
