--- a/public/dominoes/index.html
+++ b/public/dominoes/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
-<?php include "../header.php"; ?>
 <html>
   <head>
     <meta charset="utf-8">
-    <title>blunder.tk - Блог</title>
-    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+    <title>blunder.tk - Домино</title>
+    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Comfortaa">
+    <link rel="icon" href="logo.svg" sizes="any" type="image/svg+xml">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-app.js"></script>
     <script>
       var firebaseConfig = {
         apiKey: "AIzaSyDQvbznQa-Yb1tUcZpByS8Hsy2EGZfqZMg",
@@ -17,15 +20,13 @@
       firebase.initializeApp(firebaseConfig);
     </script>
     <script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-auth.js"></script>
+
   </head>
   <body>
 
-    <div id="result"></div>
-    <div class="progress"></div>
-    <div id="blogBlock">
 
-      <div class="content"></div>
-    </div>
-    <script src="script.js"></script>
+    <canvas id="board" width="800" height="800"></canvas>
+    <script src="logic.js"></script>
   </body>
+
 </html>
