--- a/public/404.html
+++ b/public/404.html
@@ -3,10 +3,79 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>OH NO! / 404</title>
+    <title>404 - Страница не существует</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Comfortaa">
   </head>
   <body>
-
+    <div id="errorNum">404</div>
+    <div id="errorText">Страница не существует</div>
+    <div style="position: absolute; bottom: 40px; width: 100%;">
+      <div id="speakers"> - Дружище, куда мы попали? <br> - Сам не понимаю. Давай просто вернёмся назад...</div>
+      <a id="back" href="/public/">НАЗАД</a>
+    </div>
   </body>
+
+  <style>
+  body {
+    margin: 0;
+    padding: 0;
+    font-family: Comfortaa;
+  }
+
+  #errorNum {
+    position: relative;
+    top: 40px;
+    font-size: 100px;
+    text-align: center;
+    font-weight: bold;
+    animation: floating 3s ease-in-out infinite;
+  }
+
+  #errorText {
+    position: relative;
+    top: 60px;
+    font-size: 60px;
+    text-align: center;
+    animation: floating 3s ease-in-out infinite;
+    animation-delay: .2s;
+  }
+
+  #speakers {
+    width: 100%;
+    text-align: center;
+    font-size: 20px;
+    margin-bottom: 20px;
+  }
+
+  #back {
+    display: block;
+    margin: 0 auto;
+    width: 200px;
+    text-align: center;
+    font-size: 24px;
+    text-decoration: none;
+    color: #ffffff;
+    font-weight: bold;
+    background-color: #00bbff;
+    padding: 16px 0 13px 0;
+    border-radius: 8px;
+    transition: .2s;
+  }
+
+  #back:hover { transform: scale(0.98); }
+
+  #back:active { transform: scale(0.95); }
+
+  @keyframes floating {
+    0% {
+      transform: translateY(0%);
+    }
+    50% {
+      transform: translateY(30%);
+    }
+    100% {
+      transform: translateY(0%);
+    }
+  }
+  </style>
 </html>
